# korino

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
.changeset/: config.json
.github/: FUNDING.yml  renovate.json
apps/auth-proxy/: .env.example  eslint.config.js  package.json  tsconfig.json
apps/auth-proxy/routes/r/: [...auth].ts
apps/desktop/: eslint.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  rpc.rs  rqbit.rs
apps/desktop/src-tauri/src/torrenting/: commands.rs  hashes.rs  mod.rs  peers.rs  piece.rs  torrent.rs  tracker.rs
apps/desktop/src/components/: auth-showcase.tsx  posts.tsx
apps/desktop/src/hooks/: auth.tsx  tauri.tsx  torrent.tsx
apps/desktop/src/routes/: __root.tsx  index.tsx
apps/desktop/src/stores/: settings.ts
apps/mobile/: app.config.ts  eslint.config.mjs  metro.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/: eslint.config.js  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/: _middleware.ts  env.ts
scripts/: postrelease.js  sidecarBuild.js
tooling/eslint/: package.json
tooling/github/: package.json
tooling/prettier/: index.js  package.json  tsconfig.json
tooling/tailwind/: eslint.config.js  package.json
tooling/typescript/: package.json
turbo/generators/: config.ts
turbo/generators/templates/: package.json.hbs  tsconfig.json.hbs
(+13 files in other folders)
