[package]
authors = ["you"]
description = "High quality anime torrenting and streaming"
edition = "2021"
license = ""
name = "Korino"
repository = ""
rust-version = "1.70"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "app_lib"

[build-dependencies]
tauri-build = {version = "2.0.0-rc.0", features = [] }

[dependencies]
discord-rpc-client = "0.4.0"
hex = "0.4.3"
rand = "0.8.5"
serde = {version = "1.0", features = ["derive"] }
serde_bencode = "0.2.4"
serde_bytes = "0.11.15"
serde_derive = "^1.0.0"
serde_json = "1.0"
serde_urlencoded = "0.7.1"
sha1 = "0.10.6"
tauri = {version = "2.0.0-rc.0", features = [] }
tauri-plugin-deep-link = "2.0.0-rc.0"
tauri-plugin-http = "2.0.0-beta.0"
tauri-plugin-shell = "2.0.0-rc.0"
tauri-plugin-store = "2.0.0-rc.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-single-instance = "2.0.0-rc.0"
